systemtap (0.9.9+0git20090920-1) experimental; urgency=low

  * New upstream snaphsot
  * Don't build-depend on bzip2 anymore
  * Removed patches:
    - docs-clean.diff - applied upstream
  * Install stap-sign-module into -server

 -- Євгеній Мещеряков <eugen@debian.org>  Sun, 20 Sep 2009 20:39:01 +0200

systemtap (0.9.9+0git20090910-2) experimental; urgency=low

  * Use -regex for find in clean target, hopefully fixes FTBFS on s390
  * Use © instead of (C) in debian/copyright
  * Fix path to examples in stapex (3)

 -- Євгеній Мещеряков <eugen@debian.org>  Sat, 12 Sep 2009 17:41:14 +0200

systemtap (0.9.9+0git20090910-1) experimental; urgency=low

  * New upstream snapshot
    - This release supports execution of probe modules by unpriviledged
      users. This feature is experimental and can cause security problems.
      Added note to NEWS.Debian
  * Use quilt instead of dbs
  * Strip numeric prefixes and add .diff to patches
  * Removed patches:
    - relocatable-kernel-buildid.diff - applied upstream
    - configure-quot.diff - applied upstream
    - arm-nop.diff - applied upstream 
  * Remove autotools generated files in clean target
  * New patches:
    - docs-clean.diff - remove generated files during clean
    - debversion.diff - add debian package version information into stap -V
      output
  * Install NEWS.Debian into all binary packages
  * Git is now used for packaging
    - Add Vcs-* headers to debian/control
    - Remove uupdate invokation from watch file
  * Update README.source with information about using quilt

 -- Євгеній Мещеряков <eugen@debian.org>  Sat, 12 Sep 2009 00:45:38 +0200

systemtap (0.9.9-5) unstable; urgency=low

  * New patches:
    - 39-relocatable-kernel-buildid - fix build id check for relocatable
      kernels (closes: #545277)
  * Standards-Version 3.8.3 - no changes required

 -- Євгеній Мещеряков <eugen@debian.org>  Mon, 07 Sep 2009 11:44:55 +0200

systemtap (0.9.9-4) unstable; urgency=medium
