@@ -5,8 +5,10 @@ systemtap (0.9.9+0git20090920-1) experimental; urgency=low
   * Removed patches:
     - docs-clean.diff - applied upstream
   * Install stap-sign-module into -server
+  * Remove special rule for patch target, it is supported by new enough
+    dh
 
- -- Євгеній Мещеряков <eugen@debian.org>  Sun, 20 Sep 2009 20:39:01 +0200
+ -- Євгеній Мещеряков <eugen@debian.org>  Sun, 20 Sep 2009 20:54:51 +0200
 
 systemtap (0.9.9+0git20090910-2) experimental; urgency=low
 
